--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
 					<header class="major">
 						<h2>Results</h2>
 					</header>
-					<p>Ante nunc accumsan et aclacus nascetur ac ante amet sapien sed.</p>
+					<p>All in all, we made a great game!</p>
 					<div class="row 150%">
 						<div class="4u 12u$(medium)">
 							<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<h3>Want to see the code?</h3>
+							<p>Want to check out all the work that went into this? Check out our Github!</p>
 							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="https://github.com/juicyslew/WayOfTheCard" class="button">More</a></li>
 							</ul>
 						</div>
 						<div class="4u 12u$(medium)">
