--- a/index.html
+++ b/index.html
@@ -85,15 +85,15 @@
 							<h3>Want to see the code?</h3>
 							<p>Want to check out all the work that went into this? Check out our Github!</p>
 							<ul class="actions">
-								<li><a href="https://github.com/juicyslew/WayOfTheCard" class="button">More</a></li>
+								<li><a href="https://github.com/juicyslew/WayOfTheCard" class="button">Github</a></li>
 							</ul>
 						</div>
 						<div class="4u 12u$(medium)">
 							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<h3>Sample turn</h3>
+							<p>Want to see a sample turn for our game? Click below to see!</p>
 							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="https://www.youtube.com/watch?v=uvSSYMEXBAU" class="button">Sample Turn</a></li>
 							</ul>
 						</div>
 						<div class="4u$ 12u$(medium)">
@@ -501,13 +501,3 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
-=======
-<html>
-<header><title>Way O' Da Cerd
-</title>
-</header>
-<body>
-<br>...Dude!
-</body>
-</html>
->>>>>>> 5e43b36df40ca4b29cc4489081fd4d3dc2e18fd4
