Attempt at youtube video

--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
 							</ul>
 						</div>
 						<div class="4u 12u$(medium)">
-							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/uvSSYMEXBAU" frameborder="0" allowfullscreen></iframe>
+							<!--<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>-->
 							<h3>Sample turn</h3>
 							<p>Want to see a sample turn for our game? Click below to see!</p>
 							<ul class="actions">
