--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 								<h2>Big Idea/Goal/What is this?/ <br />
 								Why did we do this?</h2>
 							</header>
-							<p>Adipiscing a commodo ante nunc accumsan et interdum mi ante adipiscing. A nunc lobortis non nisl amet vis sed volutpat aclacus nascetur ac non. Lorem curae et ante amet sapien sed tempus adipiscing id accumsan.</p>
+							<p>Way of the Card takes an absurd twist on popular digital card games: every card is randomly generated! Select from a list of random character names, shuffle your random deck, and learn the random rules variations before taking on your opponent.</p>
 						</div>
 						<div class="6u$ 12u$(medium) important(medium)">
 							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
