fixed the last commit...

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 					<p>All in all, we made a great game!</p>
 					<div class="row 150%">
 						<div class="4u 12u$(medium)">
-							<span class="image fit"><img src="SampleCode.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/SampleCode.jpg" alt="" /></span>
 							<h3>Want to see the code?</h3>
 							<p>Want to check out all the work that went into this? Check out our Github!</p>
 							<ul class="actions">
