Testing last link

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 					<header class="major">
 						<h2>Results</h2>
 					</header>
-					<p>All in all, we made a great game!</p>
+					<p>All in all, we made a great game! Judge for yourself by using the below links!</p>
 					<div class="row 150%">
 						<div class="4u 12u$(medium)">
 							<span class="image fit"><img src="images/SampleCode.png" alt="" /></span>
@@ -98,11 +98,11 @@
 							</ul>
 						</div>
 						<div class="4u$ 12u$(medium)">
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<span class="image fit"><img src="images/SoftDes.png" alt="" /></span>
+							<h3>Learn more about our class!</h3>
+							<p>If you want to learn more about the class that we completed this project for, you can check out our class's website!</p>
 							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="https://sd17spring.github.io/" class="button">More</a></li>
 							</ul>
 						</div>
 					</div>
