--- a/index.html
+++ b/index.html
@@ -114,9 +114,20 @@
 					<div class="row 150%">
 						<div class="6u 12u$(medium)">
 							<header class="major">
-								<h2>Project Evolution</h2>
+								<h2>Project Evolution--Origin Story</h2>
 							</header>
-							<p></p>
+							<p>Our project originated from a love of card games such as Hearthstone and Magic the Gathering and a love of having fun. We decided that Hearthstone wasn't random enough, and decided to remedy that through creating a game that was a little more random. We may have begun going a little overboard fast when we had the opportunity to write a game for a class that would allow us to do this. We think we didn't do enough and can do more. In order to allow all of us to work independently on this project, we made this as modular as possible, trying to limit possible conflicts . </p>
+						</div>
+						<div class="6u$ 12u$(medium) important(medium)">
+							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+						</div>
+					</div>
+					<div class="row 150%">
+						<div class="6u 12u$(medium)">
+							<header class="major">
+								<h2>The Project Grows</h2>
+							</header>
+							<p>As we continued working,</p>
 						</div>
 						<div class="6u$ 12u$(medium) important(medium)">
 							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
@@ -469,7 +480,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; WayoftheCard</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</section>
 
