--- a/index.html
+++ b/index.html
@@ -130,14 +130,20 @@
 							<header class="major">
 								<h2>The Project Grows</h2>
 							</header>
-							<p>As we continued working,</p>
+							<p>As we continued working, we managed to first randomize cards in the game. </p>
+						</div>
+						<div class="6u 12u$(medium)">
+							<header class="major">
+								<h2>Race to the Finish</h2>
+							</header>
+							<p>With card creation and rule randomization done, there was only one thing left--to finish the user interface with around a week left in the project. Easy, right? </p>
 						</div>
 					</div>
 				</div>
 			</section>
 
 		<!-- Four -->
-			<section id="six" class="main style2 special">
+			<section id="six" class="main style1 special">
 				<div class="container">
 					<header class="major">
 						<h2>Attribution</h2>
