I want to see a few things in the website.

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 					</div>
 					<div class="row 150%">
 						<div class="6u$ 12u$(medium) important(medium)">
-							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+							<img src="images/pic01.jpg" alt="" /> <!--<span class="image fit"></span> -->
 						</div>
 						<div class="6u 12u$(medium)">
 							<header class="major">
@@ -132,12 +132,13 @@
 							</header>
 							<p>As we continued working, we managed to first randomize cards in the game. </p>
 						</div>
-						<div class="6u 12u$(medium)">
-							<header class="major">
-								<h2>Race to the Finish</h2>
-							</header>
-							<p>With card creation and rule randomization done, there was only one thing left--to finish the user interface with around a week left in the project. Easy, right? </p>
-						</div>
+					</div>
+
+					<div class="6u 12u$(medium)">
+						<header class="major">
+							<h2>Race to the Finish</h2>
+						</header>
+						<p>With card creation and rule randomization done, there was only one thing left--to finish the user interface with around a week left in the project. Easy, right? </p>
 					</div>
 				</div>
 			</section>
