Last commit before I'm off for the night; making sure that everything is good.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	Way Of The Card
+	Way Of The Card Website
 -->
 <html>
 	<head>
@@ -150,7 +150,7 @@
 					</div>
 					<div class="row 150%">
 						<div class="6u$ 12u$(medium) important(medium)">
-							<img src="images/pic01.jpg" alt="" /> <!--<span class="image fit"></span> -->
+							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
 						</div>
 						<div class="6u 12u$(medium)">
 							<header class="major">
