--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 						</div>
 					</div>
 					<div class="row 150%">
-						<div class="6u$ 12u$(medium) important(medium)">
+						<div class="6u$ 12u$(medium)">
 							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
 						</div>
 						<div class="6u 12u$(medium)">
