--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 						</div>
 						<div class="6u 12u$(medium)">
 							<header class="major">
-								<h2>The Project Grows</h2>
+								<h2>The Project Grows Blep</h2>
 							</header>
 							<p>As we continued working, we managed to first randomize cards in the game. </p>
 						</div>
