--- a/index.html
+++ b/index.html
@@ -149,12 +149,16 @@
 						</div>
 					</div>
 					<div class="row 150%">
-						<div class="6u$ 12u$(medium)">
+						<div class="6u$ 12u$(medium) important(medium)">
 							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+							<header class="major">
+								<h2>The Project Grows</h2>
+							</header>
+							<p>As we continued working, we managed to first randomize cards in the game. </p>
 						</div>
 						<div class="6u 12u$(medium)">
 							<header class="major">
-								<h2>The Project Grows Blep</h2>
+								<h2>The Project Grows</h2>
 							</header>
 							<p>As we continued working, we managed to first randomize cards in the game. </p>
 						</div>
