--- a/index.html
+++ b/index.html
@@ -165,10 +165,15 @@
 					</div>
 
 					<div class="6u 12u$(medium)">
-						<header class="major">
-							<h2>Race to the Finish</h2>
-						</header>
-						<p>With card creation and rule randomization done, there was only one thing left--to finish the user interface with around a week left in the project. Easy, right? </p>
+						<div class="6u 12u$(medium)">
+								<header class="major">
+								<h2>Race to the Finish</h2>
+							</header>
+							<p>With card creation and rule randomization done, there was only one thing left--to finish the user interface with around a week left in the project. Easy, right? </p>
+						</div>
+						<div class="6u$ 12u$(medium) important(medium)">
+							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+						</div>s
 					</div>
 				</div>
 			</section>
