--- a/index.html
+++ b/index.html
@@ -164,16 +164,16 @@
 						</div>
 					</div>
 
-					<div class="6u 12u$(medium)">
+					<div class="row 150%">
 						<div class="6u 12u$(medium)">
-								<header class="major">
+							<header class="major">
 								<h2>Race to the Finish</h2>
 							</header>
 							<p>With card creation and rule randomization done, there was only one thing left--to finish the user interface with around a week left in the project. Easy, right? </p>
 						</div>
 						<div class="6u$ 12u$(medium) important(medium)">
 							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
-						</div>s
+						</div>
 					</div>
 				</div>
 			</section>
