Add screenshot to first text block

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							<p>Way of the Card takes an absurd twist on popular digital card games: every card is randomly generated! Select from a list of random character names, shuffle your random deck, and learn the random rules variations before taking on your opponent.</p>
 						</div>
 						<div class="6u$ 12u$(medium) important(medium)">
-							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/WayOfTheCard.png" alt="" /></span>
 						</div>
 					</div>
 				</div>
