--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 								<h2>Big Idea<br />
 								Why did we do this?</h2>
 							</header>
-							<p>Way of the Card takes an absurd twist on popular digital card games: every card is randomly generated! Select from a list of random character names, shuffle your random deck, and learn the random rules variations before taking on your opponent.</p>
+							<p>Way of the Card takes an new twist on popular digital card games: every card is randomly generated! Select from a list of random character names, shuffle your random deck, and learn the random rules variations before taking on your opponent.</p>
 						</div>
 						<div class="6u$ 12u$(medium) important(medium)">
 							<span class="image fit"><img src="images/WayOfTheCard.png" alt="" /></span>
@@ -75,7 +75,7 @@
 			</section>
 
 		<!-- Three -->
-			<section id="three" class="main style2">
+			<section id="three" class="main style1">
 				<div class="container">
 					<div class="row 150%">
 						<div class="6u 12u$(medium)">
@@ -97,7 +97,7 @@
 			</section>
 
 		<!-- Four -->
-			<section id="four" class="main style1 special">
+			<section id="four" class="main style2 special">
 				<div class="container">
 					<header class="major">
 						<h2>Results</h2>
@@ -135,7 +135,7 @@
 
 
 		<!-- Five -->
-			<section id="five" class="main style2">
+			<section id="five" class="main style1">
 				<div class="container">
 					<div class="row 150%">
 						<div class="6u 12u$(medium)">
@@ -179,7 +179,7 @@
 			</section>
 
 		<!-- Six -->
-			<section id="six" class="main style1 special">
+			<section id="six" class="main style2 special">
 				<div class="container">
 					<header class="major">
 						<h2>Attribution</h2>
