Some words on the web of sites.

--- a/index.html
+++ b/index.html
@@ -86,9 +86,8 @@
 								<h2>Implementation Information<br />
 								How Does it work?</h2>
 							</header>
-							<p>Insert Text Here!</p>
-							<p>Blandit faucibus proin. Ac aliquam integer adipiscing enim non praesent vis commodo nunc phasellus cubilia ac risus accumsan. Accumsan blandit. Lobortis phasellus non lobortis dit varius mi varius accumsan lobortis. Blandit ante aliquam lacinia lorem lobortis semper morbi col faucibus vitae integer placerat accumsan orci eu mi odio tempus adipiscing adipiscing adipiscing curae consequat feugiat etiam dolore.</p>
-							<p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p>
+							<p>One of the main goals of the project was to allow all five members to work on it independently, and so we did our best to build a modular program. We successfully did this following the initial "game creation" phase, which resulted in a teminal-only base game that was to be modified the rest of the time. The main game runs in Game.py and references all other Python files when performing tasks. The Constants file is where all game rules for a game are stored, as well as maintaining all constants for the game. We worked hard to make sure that the code is commented and so that variables are named in a manner that is consistent and makes sense, helping with the code's ability to blend together as we merged our separate parts together.</p>
+							<p>Working down from Game.py, we have two Players, within which is independent decks, hands, and cards. All cards were created by Randgen.py at the beginning of the game after players picked their randomly generated names.</p>
 						</div>
 					</div>
 				</div>
