README on website??

--- a/index.html
+++ b/index.html
@@ -67,6 +67,13 @@
 							</header>
 							<p></p>
 							THIS IS WHERE OUR ALREADY DONE README GOES.
+							For full instructions on installing our game, please read our <a href = "https://github.com/juicyslew/WayOfTheCard/blob/master/README.md">README</a>.
+
+							<ol>
+							  <li>Coffee</li>
+							  <li>Tea</li>
+							  <li>Milk</li>
+							</ol>
 						</div>
 					</div>
 				</div>
