changes to readme and website.

--- a/index.html
+++ b/index.html
@@ -65,14 +65,15 @@
 							<header class="major">
 								<h2>User Instructions</h2>
 							</header>
-							<p></p>
-							THIS IS WHERE OUR ALREADY DONE README GOES.
-							For full instructions on installing our game, please read our <a href = "https://github.com/juicyslew/WayOfTheCard/blob/master/README.md">README</a>.
-
+							<p> THIS IS WHERE OUR ALREADY DONE README GOES.</p>
+							<p>For full instructions on installing our game, please read our <a href = "https://github.com/juicyslew/WayOfTheCard/blob/master/README.md">README</a>.</p>
+							<p>In order to play the game, follow these instructions:</p>
 							<ol>
-							  <li>Coffee</li>
-							  <li>Tea</li>
-							  <li>Milk</li>
+							  <li>Run Game.py in the command line from where the repository is saved on your computer.</li>
+							  <li>Options for Arena mode and Random rule generation will appear; answer according to how you want to play.</li>
+							  <li>The game will then randomly create names that the players can select. Once both players are done, there will be a short pause as the game generates.</li>
+								<li>The Game field will appear in a separate window from where you can play.</li>
+								<li>Play through the game to its conclusion. If you wish to end early, press CTRL-C in the command line.</li>
 							</ol>
 						</div>
 					</div>
