More user instruction update.

--- a/index.html
+++ b/index.html
@@ -65,9 +65,8 @@
 							<header class="major">
 								<h2>User Instructions</h2>
 							</header>
-							<p> THIS IS WHERE OUR ALREADY DONE README GOES.</p>
 							<p>For full instructions on installing our game, please read our <a href = "https://github.com/juicyslew/WayOfTheCard/blob/master/README.md">README</a>.</p>
-							<p>In order to play the game, follow these instructions:</p>
+								<h3>In order to play the game, follow these instructions:</h3>
 							<ol>
 							  <li>Run Game.py in the command line from where the repository is saved on your computer.</li>
 							  <li>Options for Arena mode and Random rule generation will appear; answer according to how you want to play.</li>
