added photo for race to the finish

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 							<p>With card creation and rule randomization done, there was only one thing left--to finish the user interface with around a week left in the project. Easy, right? </p>
 						</div>
 						<div class="6u$ 12u$(medium) important(medium)">
-							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/WotC_photo.png" alt="" /></span>
 						</div>
 					</div>
 				</div>
