--- a/index.html
+++ b/index.html
@@ -189,7 +189,8 @@
 					<header class="major">
 						<h2>Attribution</h2>
 					</header>
-					<p>Way of the Card was made possible by a number of free, open-source Python libraries, including Pygame and Python Imaging Library. All icons, art, and photos belong to their respective creators.</p>
+					<p>Way of the Card was made possible by a number of free, open-source Python libraries, including Pygame and Python Imaging Library.</p>
+					<p>All icons, art, and photos belong to their respective creators.</p>
 					<!--<ul class="actions uniform">
 						<li><a href="#" class="button special">Sign Up</a></li>
 						<li><a href="#" class="button">Learn More</a></li>
