Test for website.

--- a/index.html
+++ b/index.html
@@ -61,19 +61,21 @@
 								<li><span class="icon style6 major fa-calendar"></span></li>
 							</ul>
 						</div>
-						<div class="6u$ 12u$(medium)">
-							<header class="major">
-								<h2>User Instructions</h2>
-							</header>
-							<p>For full instructions on installing our game, please read our <a href = "https://github.com/juicyslew/WayOfTheCard/blob/master/README.md">README</a>.</p>
-								<h3>In order to play the game, follow these instructions:</h3>
-							<ol>
-							  <li>Run Game.py in the command line from where the repository is saved on your computer.</li>
-							  <li>Options for Arena mode and Random rule generation will appear; answer according to how you want to play.</li>
-							  <li>The game will then randomly create names that the players can select. Once both players are done, there will be a short pause as the game generates.</li>
-								<li>The Game field will appear in a separate window from where you can play.</li>
-								<li>Play through the game to its conclusion. If you wish to end early, press CTRL-C in the command line.</li>
-							</ol>
+						<div style="background-color: #FFF8C6; margin-left: 20px; margin-right: 20px; padding-bottom: 8px; padding-left: 8px; padding-right: 8px; padding-top: 8px;">
+							<div class="6u$ 12u$(medium)">
+								<header class="major">
+									<h2>User Instructions</h2>
+								</header>
+								<p>For full instructions on installing our game, please read our <a href = "https://github.com/juicyslew/WayOfTheCard/blob/master/README.md">README</a>.</p>
+									<h3>In order to play the game, follow these instructions:</h3>
+								<ol>
+								  <li>Run Game.py in the command line from where the repository is saved on your computer.</li>
+								  <li>Options for Arena mode and Random rule generation will appear; answer according to how you want to play.</li>
+								  <li>The game will then randomly create names that the players can select. Once both players are done, there will be a short pause as the game generates.</li>
+									<li>The Game field will appear in a separate window from where you can play.</li>
+									<li>Play through the game to its conclusion. If you wish to end early, press CTRL-C in the command line.</li>
+								</ol>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -202,7 +204,7 @@
 		<!--
 			<section id="five" class="main style1">
 				<div class="container">
-					<header class="major special"> 
+					<header class="major special">
 						<h2>Elements</h2>
 					</header>
 
