--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 								<li><span class="icon style6 major fa-calendar"></span></li>
 							</ul>
 						</div>
-						<div style="background-color: #FFF8C6; margin-left: 20px; margin-right: 20px; padding-bottom: 8px; padding-left: 8px; padding-right: 8px; padding-top: 8px;">
-							<div class="6u$ 12u$(medium)">
+						<div class="6u$ 12u$(medium)">
+							<div style="background-color: #000000; margin-left: 20px; margin-right: 20px; padding-bottom: 8px; padding-left: 8px; padding-right: 8px; padding-top: 8px;">
 								<header class="major">
 									<h2>User Instructions</h2>
 								</header>
