--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
 								<header class="major">
 									<h2>User Instructions</h2>
 								</header>
+							</div>
+							<div style="background-color: #000000; margin-left: 20px; margin-right: 20px; padding-bottom: 8px; padding-left: 8px; padding-right: 8px; padding-top: 8px;">
 								<p>For full instructions on installing our game, please read our <a href = "https://github.com/juicyslew/WayOfTheCard/blob/master/README.md">README</a>.</p>
 									<h3>In order to play the game, follow these instructions:</h3>
 								<ol>
