--- a/index.html
+++ b/index.html
@@ -62,12 +62,10 @@
 							</ul>
 						</div>
 						<div class="6u$ 12u$(medium)">
-							<div style="background-color: #000000; opacity: 0.2; margin-left: 20px; margin-right: 20px; padding-bottom: 8px; padding-left: 8px; padding-right: 8px; padding-top: 8px;">
+							<div style="background: rgba(0, 0, 0, 0.2); margin-left: 20px; margin-right: 20px; padding-bottom: 8px; padding-left: 8px; padding-right: 8px; padding-top: 8px;">
 								<header class="major">
 									<h2>User Instructions</h2>
 								</header>
-							</div>
-							<div style="background-color: #000000; margin-left: 20px; margin-right: 20px; padding-bottom: 8px; padding-left: 8px; padding-right: 8px; padding-top: 8px;">
 								<p>For full instructions on installing our game, please read our <a href = "https://github.com/juicyslew/WayOfTheCard/blob/master/README.md">README</a>.</p>
 									<h3>In order to play the game, follow these instructions:</h3>
 								<ol>
