--- a/index.html
+++ b/index.html
@@ -51,15 +51,9 @@
 				<div class="container">
 					<div class="row 150%">
 						<div class="6u 12u$(medium)">
-							<span class="icon major fa-cloud"></span>
-							<ul class="major-icons">
-								<li><span class="icon style1 major fa-code"></span></li>
-								<li><span class="icon style2 major fa-bolt"></span></li>
-								<li><span class="icon style3 major fa-camera-retro"></span></li>
-								<li><span class="icon style4 major fa-cog"></span></li>
-								<li><span class="icon style5 major fa-desktop"></span></li>
-								<li><span class="icon style6 major fa-calendar"></span></li>
-							</ul>
+							<h1>Program Architecture</h1>
+							<span class="image fit"><img src="images/WayOfTheCardStructure.png" alt="" /></span>
+							<p>The Overarching Hierarchy of our program.</p>
 						</div>
 						<div class="6u$ 12u$(medium)">
 							<div style="background: rgba(0, 0, 0, 0.2); margin-left: 20px; margin-right: 20px; padding-bottom: 8px; padding-left: 8px; padding-right: 8px; padding-top: 8px;">
