--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				<div class="container">
 					<div class="row 150%">
 						<div class="6u 12u$(medium)">
-							<span class="image fit"><img src="images/WayOfTheCardStructure.png" alt="" /></span>
+							<span class="image fit"><img src="images/CardsFloating.png" alt="" /></span>
 						</div>
 						<div class="6u$ 12u$(medium)">
 							<div style="background: rgba(0, 0, 0, 0.2); margin-left: 20px; margin-right: 20px; padding-bottom: 8px; padding-left: 8px; padding-right: 8px; padding-top: 8px;">
