Deleting old codes

--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
 					</header>
 					<p>Way of the Card was made possible by a number of free, open-source Python libraries, including Pygame and Python Imaging Library.</p>
 					<p>All icons, art, and photos belong to their respective creators.</p>
+					<p>Thanks to <a href = "https://html5up.net">html5</a> for the use of the template for this website.</p>
 					<!--<ul class="actions uniform">
 						<li><a href="#" class="button special">Sign Up</a></li>
 						<li><a href="#" class="button">Learn More</a></li>
